# paginaChepeCarlos3D

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  GUIA_PRODUCTOS.md  MEJORAS.md  Makefile  PLANTILLA_PRODUCTO.md  README.md  docker-compose.yml  nginx.conf  pelicanconf.py  publishconf.py  pyproject.toml  tasks.py
content/blog/: materiales-impresion-3d-pla-petg.md
content/images_opt/: .optimize_state.json
content/instagram-source/: README.txt  feed.json
content/pages/: about.md  contact.md
content/productos/: luffy-grande.md  monitor-curvo-27.md  mouse-inalambrico.md  pikachu.md  teclado-mecanico-rgb.md
output/: archives.html  authors.html  categories.html  index.html  luffy-grande.html  monitor-curvo-27-144hz.html  mouse-inalambrico-ergonomico.html  my-first-review.html  pkachu-crochet.html  tags.html  teclado-mecanico-rgb-pro.html
output/author/: chepecarlos.html
output/catalogo/: index.html
output/category/: onepiece.html  pokemon.html  productos.html  review.html  tecnologia.html
output/tag/: amigurumi.html  crochet.html  gaming.html  inalambrico.html  monitor.html  mouse.html  onepiece.html  perifericos.html  pokemon.html  producto.html  rgb.html  teclado.html  tecnologia.html
plugins/: auto_gallery.py
scripts/: audit_products.py  check_dolibarr_prices.py  optimize_images.py  report_image_savings.py  sync_instagram_feed.py
theme/templates/: 404.html  archives.html  article.html  author.html  authors.html  base.html  blog.html  catalog.html  categories.html  category.html  index.html  page.html  period_archives.html  tag.html  (+2 more)
(+43 files in other folders)
